[workspace]
members = [
    "programs/*",
    "libs/*",
    "cli"
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/divw-fun/divw"
homepage = "https://divw.fun"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
