[package]
name = "divw_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.32.1"
divw_math = { path = "../../libs/divw_math" }
divw_wire = { path = "../../libs/divw_wire" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"anchor-debug\", \"custom-heap\", \"custom-panic\", \"no-idl\", \"no-log-ix-name\"))", "cfg(target_os, values(\"solana\"))"] }
